--- a/SqlLibrary/SqlLibrary.csproj
+++ b/SqlLibrary/SqlLibrary.csproj
@@ -40,10 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Vendor.cs" />
     <Compile Include="GenericController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
     <Compile Include="UsersController.cs" />
+    <Compile Include="VendorsController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
